--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </ul>
     </nav>
     <header>
-        <h1>Arda is the best ever</h1>
+        <h1>Arda är bäst</h1>
     </header>
     <main>
         <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Cat_Sphynx._Kittens._img_11.jpg" alt="Skogsväg" class="floatRight">
