--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Cat_Sphynx._Kittens._img_11.jpg" alt="Skogsväg" class="floatRight">
-        <p>Arda is the best <br> Hampus sucks  </p>
+        <p>Arda is the best <br> Hampus suger</p>
         
         <h2>Ardas info</h2>
         <p>Arda is stronger than Hampus</p>
